ajout de la bonne bdd properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=msprAPI
-spring.datasource.url=jdbc:mariadb://localhost:3306/petstore
+spring.datasource.url=jdbc:mariadb://localhost:3306/mspr
 spring.datasource.username=root
 spring.datasource.password=
 
