--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
 			<version>1.8.0</version> <!-- ou une version plus récente -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+
 
 	</dependencies>
 
