a refaire les tests.

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.14.2</version> <!-- Assurez-vous de la dernière version disponible -->
+			<scope>test</scope>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -82,7 +90,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.8.0</version> <!-- ou une version plus récente -->
+			<version>1.8.0</version>
 		</dependency>
 
 		<dependency>
