--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=msprAPI
 spring.datasource.url=jdbc:mariadb://localhost:3306/mspr
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
